Show result in text in textbox after dropping file

--- a/html/index.html
+++ b/html/index.html
@@ -19,10 +19,14 @@
         border-color: #000;
         color: #000;
       }
+      textarea {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
     <div id="dropZone">Drop files here</div>
+    <textarea id="text" rows="100"></textarea>
 
     <script type='text/javascript'>
       var Module = {
