Add link to published site

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
     </style>
   </head>
   <body>
-    <textarea id="text" ></textarea>
+    <textarea id="text" >Drop your applet/font file here</textarea>
     <textarea id="translation" ></textarea>
     <div id="resultDiv"></div>
     <button id="encodeButton">Encode and download</button>
